@@ -1,19 +1,13 @@
 package dtool.ast.references;
 
 import static melnorme.utilbox.core.Assert.AssertNamespace.assertNotNull;
-
-import java.util.Collection;
-
 import dtool.ast.ASTCodePrinter;
 import dtool.ast.ASTNodeTypes;
 import dtool.ast.IASTVisitor;
-import dtool.ast.definitions.DefUnit;
 import dtool.parser.IToken;
 import dtool.resolver.CommonDefUnitSearch;
-import dtool.resolver.DefUnitSearch;
 import dtool.resolver.PrefixDefUnitSearch;
 import dtool.resolver.ReferenceResolver;
-import dtool.resolver.api.IModuleResolver;
 
 public class RefPrimitive extends NamedReference {
 	
